<resources>
    <string name="app_name">ShoeStore</string>
    <string name="id">ID : </string>
    <string name="pw">PW :</string>
    <string name="input_your_id">input your id</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="welcome">Welcome to visit our service</string>
    <string name="thanks">Thank you for visiting again</string>
    <string name="press_start_button">Hi %s!</string>
    <string name="start">Start</string>
    <string name="information_msg">We can offer information about shoes.</string>
    <string name="press_next_button">Press next button</string>
    <string name="next">Next</string>
    <string name="add_information_of_shoe">Add information of shoe</string>
    <string name="add">Add</string>
    <string name="fill_in_the_shoe_information">Fill in the shoe information</string>
    <string name="fill_in_the_login_information">Fill in the login information</string>
    <string name="name">Name: </string>
    <string name="company">Company: </string>
    <string name="description">Description</string>
    <string name="input_shoes_name">Input shoes name</string>
    <string name="input_company_name">Input company name</string>
    <string name="input_shoes_description">Input shoes description</string>
    <string name="size">Size:</string>
    <string name="input_shoes_size">Input shoes size</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="toast_error">Fill in the all information of shoes</string>
    <string name="logout">logout</string>
</resources>
